--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.1",
     "react-native-youtube-iframe": "^2.3.0",
+    "react-tidy": "^1.3.7",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
