--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
+    "expo-clipboard": "^4.3.0",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
