--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
-    "expo-clipboard": "^4.3.0",
+    "expo-clipboard": "~4.0.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
+    "radio-browser": "^2.2.3",
+    "radio-browser-api": "^6.0.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-audio-streaming": "^2.3.2",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
